# gb-step

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/: cart_backup.hpp  debugger.hpp  dma.hpp  dma_channel.hpp  dma_controller.hpp  flash.hpp  gba.hpp  int.hpp  joypad.hpp  memory.hpp  memory_regions.hpp  ppu.hpp  screen.hpp  sram.hpp  system_clock.hpp  timer.hpp  timers.hpp  types.hpp  utils.hpp
include/apu/: apu.hpp  apu_io_registers.hpp
include/arm7tdmi/: cpu.hpp  ir_io_registers.hpp  irq_channel.hpp  op_cache.hpp  opbacktrace.hpp  registers.hpp  stateview.hpp  types.hpp
include/common/: circular_queue.hpp
include/dma/: channel.hpp  controller.hpp  dma_io_registers.hpp
include/memory/: cart_backup.hpp  flash.hpp  io_registers.hpp  memory.hpp  read_write_interface.hpp  regions.hpp  sram.hpp  types.hpp
include/platform/: logging.hpp
include/platform/sfml/: audio.hpp  joypad.hpp  window.hpp
include/ppu/: bg_control_info.hpp  blend_control.hpp  lcd_control.hpp  lcd_io_registers.hpp  obj_attributes.hpp  pixel.hpp  ppu.hpp  tile_info.hpp  window.hpp
include/timers/: timer.hpp  timers.hpp  timers_io_registers.hpp
playground/template_function_bench/: main.cpp
src/: cpu.hpp  debugger.cpp  debugger.hpp  dma.hpp  dma_channel.cpp  flash.cpp  gba.hpp  joypad.cpp  main.cpp  memory.cpp  memory.hpp  memory_regions.hpp  ppu.cpp  ppu.hpp  screen.hpp  timer.hpp  utils.hpp
src/apu/: apu.cpp  apu_io_registers.cpp
src/arm7tdmi/: arm_opcodes.cpp  arm_opcodes.hpp  cpu.cpp  cpu.hpp  ir_io_registers.cpp  registers.cpp  registers.hpp  thumb_opcodes.cpp  types.hpp  utils.hpp
src/dma/: channel.cpp  controller.cpp  dma_io_registers.cpp
src/memory/: flash.cpp  io_registers.cpp  memory.cpp  read_write_interface.cpp
src/platform/: logging.cpp
src/platform/sfml/: window.cpp  window.hpp
src/ppu/: draw_control.cpp  draw_util.cpp  lcd_io_registers.cpp  objects.cpp  ppu.cpp  rotscale_modes.cpp  text_modes.cpp
src/timers/: timer.cpp  timers.cpp  timers_io_registers.cpp
